k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80  # Service port (outside world will use this)
      targetPort: 80
      nodePort: 30001
  type: NodePort
